--- a/.github/workflows/tagpr.yml
+++ b/.github/workflows/tagpr.yml
@@ -10,12 +10,14 @@ jobs:
     permissions:
       contents: read
     steps:
-    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
     - uses: actions/create-github-app-token@0d564482f06ca65fa9e77e2510873638c82206f2 # v1.11.5
       id: app-token
       with:
         app-id: ${{ vars.TAGPR_GITHUB_APP_ID }}
         private-key: ${{ secrets.TAGPR_GITHUB_APP_PRIVATE_KEY }}
+    - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      with:
+        token: ${{ steps.app-token.outputs.token }}
     - uses: Songmu/tagpr@e89d37247ca73d3e5620bf074a53fbd5b39e66b0 # v1.5.1
       env:
         GITHUB_TOKEN: ${{ steps.app-token.outputs.token }}
