--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,12 @@ jobs:
       - name: Build
         run: pnpm build 
 
+      - name: Set up .npmrc for npm publish
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+        run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+
       - name: Publish to npm
         if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
         run: |
