--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -100,6 +100,10 @@ jobs:
         with:
           persist-credentials: false
 
+      - uses: aquaproj/aqua-installer@d1fe50798dbadd4eb5b98957290ca175f6b4870f # v4.0.2
+        with:
+          aqua_version: v2.53.9
+
       - name: Download build artifacts
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093 # v4.3.0
         with:
@@ -108,7 +112,7 @@ jobs:
 
       - name: Publish to npm
         run: |
-          npm publish --provenance --access public
+          npm publish --access public
 
   docker:
     runs-on: ubuntu-latest
