--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -86,6 +86,19 @@ jobs:
           name: dist
           path: dist/ 
 
+      - name: Debug npm / OIDC environment
+        run: |
+          echo "node: $(node -v)"
+          echo "npm before: $(npm -v)"
+          npm install -g npm@latest
+          echo "npm after: $(npm -v)"
+
+          echo "registry: $(npm config get registry)"
+          echo "OIDC URL present? ${ACTIONS_ID_TOKEN_REQUEST_URL:+yes}${ACTIONS_ID_TOKEN_REQUEST_URL:-no}"
+          echo "OIDC TOKEN var present? ${ACTIONS_ID_TOKEN_REQUEST_TOKEN:+yes}${ACTIONS_ID_TOKEN_REQUEST_TOKEN:-no}"
+
+          npm publish --dry-run --access public
+
   publish:
     runs-on: ubuntu-latest
     needs: [test, build]
