--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,7 +111,9 @@ jobs:
           path: dist/
 
       - name: Publish to npm
+        # requires npm > 11.5.1
         run: |
+          npm install -g npm@latest
           npm publish --access public
 
   docker:
